<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ip_textbox">Enter IP here</string>
    <string name="msg_textbox">Enter Message Here</string>
    <string name="ip_hinttext">eg. 192.168.x.x</string>
    <string name="send_button">Send</string>
    <string name="connect_textbox">Connect</string>
    <string name="default_conn_status">Not Connected</string>

</resources>
