<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/ipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_textbox" />

    <EditText
        android:id="@+id/ipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ipTextView"
        android:layout_toRightOf="@+id/ipTextView"
        android:ems="10"
        android:hint="@string/ip_hinttext" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/msgEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignLeft="@+id/msgTextView"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/msgTextView"
        android:ems="10"
        android:hint="@string/hello_world"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/msgEditText"
        android:layout_centerVertical="true"
        android:text="@string/send_button" />

    <LinearLayout
        android:id="@+id/receiveMsgLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/msgEditText"
        android:layout_alignRight="@+id/sendButton"
        android:layout_below="@+id/sendButton"
        android:orientation="vertical" >

    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ipEditText"
        android:layout_below="@+id/ipEditText"
        android:text="@string/connect_textbox" />

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ipTextView"
        android:layout_below="@+id/connectButton"
        android:text="@string/msg_textbox"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>